--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,21 +22,19 @@ jobs:
         run: forge test --no-match-path "test/fork/**/*.sol"
         env:
           FOUNDRY_PROFILE: ci
-          FORK_TESTS: false
 
-  # test-fork:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  test-fork:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Install Foundry
-  #       uses: foundry-rs/foundry-toolchain@v1
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
-  #     - name: Run tests
-  #       run: forge test --match-path "test/fork/**/*.sol"
-  #       env:
-  #         FOUNDRY_PROFILE: ci
-  #         FORK_TESTS: false
+      - name: Run tests
+        run: forge test --match-path "test/fork/**/*.sol"
+        env:
+          FOUNDRY_PROFILE: ci
 
   lint:
     runs-on: ubuntu-latest
@@ -69,8 +67,6 @@ jobs:
 
       - name: Run coverage
         run: forge coverage --report summary --report lcov
-        env:
-          FORK_TESTS: false
 
       # To ignore coverage for certain directories modify the paths in this step as needed. The
       # below default ignores coverage results for the test and script directories. Alternatively,
