--- a/foundry.toml
+++ b/foundry.toml
@@ -14,6 +14,10 @@ verbosity = 3
 runs = 100
 max_test_rejects = 1_000_000 # Number of times `vm.assume` can fail
 
+[profile.ci.fuzz]
+runs = 10_000
+max_test_rejects = 1_000_000 # Number of times `vm.assume` can fail
+
 [fmt]
   line_length = 120
   tab_width = 4
